--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -4,27 +4,25 @@
 <form action="/flights" method="POST">
   <label>Airline
       <select name="airline">
-        <option value="American">American</option>
-        <option value="Delta">Delta</option>
-        <option value="Southwest">Southwest</option>
-        <option value="United">United</option>
+        <% flightCreationData.airline.forEach(function(a) { %>
+          <option value="<%= a %>"><%= a %></option>
+       <% }) %>
       </select>
   </label><br>
   <label>Airport:
     <select name="airport">
-        <option value="BTR">BTR</option>
-        <option value="AUS">AUS</option>
-        <option value="LAX">LAX</option>
-        <option value="DEN">DEN</option>
+        <% flightCreationData.airport.forEach(function(a) { %>
+          <option value="<%= a %>"><%= a %></option>
+       <% }) %>
     </select>
   </label><br>
-  <label>Flight Number:
-    <input type="number" name="flightNo">
+  <label>Flight No:
+    <input type="number" name="flightNo" min="10" max="9999">
   </label><br>
   <label>Departs:
     <input type="datetime-local" name="departs">
   </label><br>
-  <button type="submit">Add Flight</button>
+  <button type="submit">SUBMIT</button>
 </form>
 <p><%= errorMsg %></p>
 
