--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,12 @@
-<%- include('./partials/header')%>
-<%- include('./partials/footer')%>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Mongoose Flights</h1>
+    <a href="/flights/new"Add a Flight></a>
+</body>
+</html>
